<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="10dp"
    android:background="@color/bid_ui_bg_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/bid_title"
        style="@style/bid_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:text="@string/select_your_bid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/first_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bid_title"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bid_14"
            style="@style/bid_text"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bid_button_background"
            android:text="@string/_14" />
        <Button
            android:id="@+id/bid_15"
            style="@style/bid_text"
            android:layout_margin="2dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bid_button_background"
            android:text="@string/_15" />
        <Button
            android:id="@+id/bid_16"
            style="@style/bid_text"
            android:layout_margin="2dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bid_button_background"
            android:text="@string/_16" />
        <Button
            android:id="@+id/bid_17"
            style="@style/bid_text"
            android:layout_margin="2dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bid_button_background"
            android:text="@string/_17" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/second_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_row"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bid_18"
            style="@style/bid_text"
            android:layout_margin="2dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bid_button_background"
            android:text="@string/_18" />
        <Button
            android:id="@+id/bid_19"
            style="@style/bid_text"
            android:layout_margin="2dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bid_button_background"
            android:text="@string/_19" />
        <Button
            android:id="@+id/bid_20"
            style="@style/bid_text"
            android:layout_margin="2dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bid_button_background"
            android:text="@string/_20" />
        <Button
            android:id="@+id/bid_21"
            style="@style/bid_text"
            android:layout_margin="2dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bid_button_background"
            android:text="@string/_21" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/second_row"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bid_22"
            style="@style/bid_text"
            android:layout_margin="2dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bid_button_background"
            android:text="@string/_22" />
        <Button
            android:id="@+id/bid_23"
            style="@style/bid_text"
            android:layout_margin="2dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bid_button_background"
            android:text="@string/_23" />
        <Button
            android:id="@+id/bid_24"
            style="@style/bid_text"
            android:layout_margin="2dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bid_button_background"
            android:text="@string/_24" />
        <Button
            android:id="@+id/bid_25"
            style="@style/bid_text"
            android:layout_margin="2dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bid_button_background"
            android:text="@string/_25" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourth_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/third_row">

        <Button
            android:id="@+id/bid_26"
            style="@style/bid_text"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:background="@drawable/bid_button_background"
            android:text="@string/_26" />

        <Button
            android:id="@+id/bid_27"
            style="@style/bid_text"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:background="@drawable/bid_button_background"
            android:text="@string/_27" />

        <Button
            android:id="@+id/bid_28"
            style="@style/bid_text"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:background="@drawable/bid_button_background"
            android:text="@string/_28" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fifth_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fourth_row">

        <Button
            android:id="@+id/thani"
            style="@style/bid_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:background="@drawable/bid_button_background"
            android:text="@string/thani" />

        <Button
            android:id="@+id/pass"
            style="@style/bid_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:background="@drawable/bid_button_background"
            android:text="@string/pass" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>